# RingRift

./: .dockerignore  .env.example  .env.staging  .env.staging.example  .gitignore  .prettierignore  AGENTS.md  AI_ARCHITECTURE.md  ARCHITECTURE_ASSESSMENT.md  ARCHITECTURE_REMEDIATION_PLAN.md  CHANGELOG.md  CLAUDE.md  CLUSTER_STATUS_CRITICAL.txt  CODEBASE_EVALUATION.md  COMPREHENSIVE_PROJECT_ASSESSMENT.md  CONTRIBUTING.md  CURRENT_RULES_STATE.md  CURRENT_STATE_ASSESSMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_ARCHITECT_REPORT.md  IMPLEMENTATION_STATUS.md  IMPROVEMENT_PLAN.md  KNOWN_ISSUES.md  NEXT_STEPS.md  P2P_INVESTIGATION_SUMMARY.md  P2P_STATUS_TABLE.md  PLAN.md  PLAYABLE_GAME_IMPLEMENTATION_PLAN.md  PROJECT_GOALS.md  QUICKSTART.md  README.md  RINGRIFT_IMPROVEMENT_PLAN.md  ROADMAP_2025Q1.md  RULES_CANONICAL_SPEC.md  RULES_ENGINE_ARCHITECTURE.md  RULES_GAP_ANALYSIS_REPORT.md  RULES_IMPLEMENTATION_MAPPING.md  RULES_SCENARIO_MATRIX.md  SECURITY.md  (+24 more)
ai-service/: .flake8  .gitignore  AGENTS.md  AI_ASSESSMENT_REPORT.md  AI_IMPROVEMENT_PLAN.md  ARCHIVAL_SUMMARY_2025-12-26.md  CLAUDE.md  COMPREHENSIVE_ACTION_PLAN_2025_12_25.md  CONSOLIDATION_SUMMARY.md  CONTRIBUTING.md  DEPENDENCY_UPDATES.md  Dockerfile  LICENSE  MIGRATION.md  P2P_DEPLOYMENT_REPORT.md  P2P_STABILITY_RECOMMENDATIONS.md  PHASE1_SUMMARY.md  PLAN_NEXT_STEPS.md  QUICK_WINS_CONSOLIDATION_REPORT.md  README.md  SECURITY.md  SYNC_CONSOLIDATION_PLAN.md  SYNC_CONSOLIDATION_SUMMARY.md  SYNC_MODULES_ANALYSIS.md  TRAINING_DATA_REGISTRY.md  analyze_smoke_test.py  cluster_health_log.jsonl  cluster_monitoring_log.md  cluster_update_report.md  db_health.after_delete_multiboard.json  db_health.after_hex_minimal.json  db_health.all.json  db_health.before_cleanup.json  db_health.canonical_square19.json  db_health.canonical_square8_phase_machine_debug.json  db_health.current.json  db_health.final.json  db_health.fixed.json  db_health.golden.json  db_health.square8_20.json  (+30 more)
ai-service/app/: DEPRECATION_AUDIT.md  _game_engine_legacy.py  board_manager.py  errors.py  game_engine.py  main.py  metrics.py  models.py  tracing.py
ai-service/archive/: __init__.py
ai-service/cloud/: README.md
ai-service/config/: cloudflared-config.yaml  cluster.yaml  cluster_nodes.env.example  cluster_nodes.yaml  cluster_nodes.yaml.example  crontab_training.txt  distributed_hosts.template.yaml  distributed_hosts.yaml  hyperparameters.json  nginx-cluster.conf  node_policies.yaml  orchestrator_hosts.example.sh  p2p_orchestrator.env.example  pipeline.json  promotion_daemon.yaml  promtail.yaml  remote_hosts.example.yaml  sync_hosts.env.example  training_hyperparams.yaml  unified_loop.slurm.example.yaml  unified_loop.slurm.yaml  unified_loop.yaml
ai-service/data/: .jsonl_converted  .manifest_cache.json  .merge_state.json  curriculum_weights.json  data_manifest.db.bak  elo_drift_history.json  elo_sync_state.json  model_promotion_history.json  promoted_models.json  registry_sync_state.json  trained_heuristic_profiles.json
ai-service/deploy/: README.md  RESILIENCE.md  deploy_cluster_resilience.py  install-services.sh  ringrift-p2p.service.template  setup_node_resilience.sh  setup_node_resilience_macos.sh
ai-service/docker/: Dockerfile.cmaes-worker
ai-service/docs/: AI_PROGRESS_LOGGING.md  AI_SERVICE_ENVIRONMENT_REFERENCE.md  AI_TRAINING_PLAN.md  API_REFERENCE.md  ARCHITECTURE.md  AUTO_NPZ_EXPORT.md  BOTTLENECK_ANALYSIS.md  CLOUD_TRAINING_INFRASTRUCTURE_PLAN.md  CLUSTER_INTEGRATION_CHECKLIST.md  CLUSTER_INTEGRATION_GUIDE.md  (+123 more)
(+4993 files in other folders)
